--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.eugene.weatherapplication"
+        applicationId "com.rajat.weatherapplication"
         minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
